<resources>
    <string name="app_name">TestEncryption</string>
    <string name="encrypt">ENCRYPT SONG TO FILE</string>
    <string name="decrypt">DECRYPT SONG FROM FILE</string>
    <string name="play_original">PLAY FROM ORIGINAL FILE</string>
    <string name="play_decrypted">PLAY FROM DECRYPTED FILE</string>
    <string name="stop">STOP</string>
    <string name="play_encrypted">PLAY FROM ENCRYPTED FILE</string>
    <string name="encrypt_to_db">ENCRYPT SONG TO DB</string>
    <string name="decrypt_from_db">DECRYPT SONG FROM DB</string>
    <string name="play_decrypted_from_db">PLAY DECRYPTED FROM DB</string>
</resources>
