<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.pacerapps.testencryption.EncryptionActivity">

    <Button
        android:id="@+id/button_encrypt"
        android:text="@string/encrypt"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:typeface="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginStart="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_decrypt"
        android:text="@string/decrypt"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:typeface="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_alignTop="@+id/button_encrypt"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_play_source"
        android:text="@string/play_original"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:typeface="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button_encrypt" />

    <Button
        android:id="@+id/button_play_decrypt"
        android:text="@string/play_decrypted"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:typeface="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/button_decrypt" />

    <Button
        android:id="@+id/button_play_encrypted"
        android:text="@string/play_encrypted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:typeface="monospace"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_stop"
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:typeface="monospace"
        android:layout_marginBottom="76dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
